# f1-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
backend/: __init__.py
backend/app/: config.py  main.py
backend/app/api/: routes_races.py
backend/app/config/: __init__.py  strategy.py
backend/app/db/: base.py  engine.py  tables.py
backend/app/domain/: models.py
backend/app/schemas/: laps.py  stints.py  strategy.py
backend/app/services/: analytics.py  cache.py  ingestion.py  normalization.py  persistence.py  strategy.py
backend/tests/: __init__.py  test_strategy.py
docs/: railway.md  walkthrough.md
frontend/: app.py
railway/backend/: railway.toml
railway/frontend/: railway.toml
scripts/: benchmark_latency.py  test_fastf1.py  test_normalization.py  test_scenarios.py
tests/: test_benchmark_latency.py  test_strategy.py
