[project]
name = "f1-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "fastf1>=3.8.1",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
